--- a/appDemo/src/main/res/layout/activity_main.xml
+++ b/appDemo/src/main/res/layout/activity_main.xml
@@ -1,109 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-
-    <com.teachonmars.modules.widget.circularImageView.CircularImageView
-        android:id="@+id/dynamicChanges"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:background="#ababab"
-        android:src="@mipmap/ic_launcher" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="#333"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/gapSize"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:gravity="end"
-            android:hint="gapSize"
-            android:inputType="numberSigned" />
 
-        <TextView
+        <com.teachonmars.modules.widget.circularImageView.CircularImageView
+            android:id="@+id/dynamicChanges"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/gapSize"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:hint="gapSize"
+                android:inputType="numberSigned" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:text="dp" />
+
+            <EditText
+                android:id="@+id/gapColor"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:hint="gapColor"
+                android:minWidth="100dp" />
+
+            <EditText
+                android:id="@+id/borderSize"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:hint="borderSize"
+                android:inputType="numberSigned" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:text="dp" />
+
+            <EditText
+                android:id="@+id/borderColor"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:hint="borderColor"
+                android:minWidth="100dp" />
+
+            <ToggleButton
+                android:id="@+id/needInset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="need inset"
+                android:textOff="no"
+                android:textOn="yes" />
+        </LinearLayout>
+
+        <com.teachonmars.modules.widget.circularImageView.CircularImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:text="dp" />
+            android:background="@android:color/transparent"
+            android:src="@mipmap/ic_launcher" />
 
-        <EditText
-            android:id="@+id/gapColor"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:hint="gapColor"
-            android:minWidth="100dp" />
 
-        <EditText
-            android:id="@+id/borderSize"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:gravity="end"
-            android:hint="borderSize"
-            android:inputType="numberSigned" />
-
-        <TextView
+        <com.teachonmars.modules.widget.circularImageView.CircularImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:text="dp" />
+            android:background="#FFF"
+            android:src="@mipmap/ic_launcher" />
 
-        <EditText
-            android:id="@+id/borderColor"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:hint="borderColor"
-            android:minWidth="100dp" />
-
-        <ToggleButton
-            android:id="@+id/needInset"
+        <com.teachonmars.modules.widget.circularImageView.CircularImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="need inset"
-            android:textOff="no"
-            android:textOn="yes" />
+            android:background="#ababab"
+            android:src="@mipmap/ic_launcher" />
+
+        <com.teachonmars.modules.widget.circularImageView.CircularImageView
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:background="#ababab"
+            android:src="@mipmap/ic_launcher" />
+
+        <com.teachonmars.modules.widget.circularImageView.CircularImageView
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:background="#ababab"
+            android:src="@mipmap/ic_launcher"
+            app:needInsetDrawable="false" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#ababab"
+            android:src="@mipmap/ic_launcher" />
+
+        <ImageView
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:background="#ababab"
+            android:src="@mipmap/ic_launcher" />
     </LinearLayout>
-
-    <com.teachonmars.modules.widget.circularImageView.CircularImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#FFF"
-        android:src="@mipmap/ic_launcher" />
-
-    <com.teachonmars.modules.widget.circularImageView.CircularImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#ababab"
-        android:src="@mipmap/ic_launcher" />
-
-    <com.teachonmars.modules.widget.circularImageView.CircularImageView
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:background="#ababab"
-        android:src="@mipmap/ic_launcher" />
-
-    <com.teachonmars.modules.widget.circularImageView.CircularImageView
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:background="#ababab"
-        android:src="@mipmap/ic_launcher"
-        app:needInsetDrawable="false" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#ababab"
-        android:src="@mipmap/ic_launcher" />
-
-    <ImageView
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:background="#ababab"
-        android:src="@mipmap/ic_launcher" />
-</LinearLayout>
+</ScrollView>
